[tool.poetry]
name = "envireach-logging"
version = "1.0.0"
description = ""
authors = ["rolando5005"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
